Increase padding space to avoid charts overlapping with scroll button

--- a/browser/css/vizgrimoire.css
+++ b/browser/css/vizgrimoire.css
@@ -135,8 +135,8 @@ img {
 }
 
 .container-fluid {
-    padding-left: 30px;
-    padding-right: 30px;
+    padding-left: 40px;
+    padding-right: 40px;
     /* max-width: 1280px; */
     margin-left: auto;
     margin-right: auto;
